--- a/angular.json
+++ b/angular.json
@@ -89,6 +89,7 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
+            "proxyConfig": "proxy.conf.js",
             "browserTarget": "sandbox:build"
           },
           "configurations": {
